# bpmn-agent

./: .bashrc.local  .gitignore  .pre-commit-config.yaml  CI_CD_IMPROVEMENTS.md  CONTRIBUTING.md  DEVOPS_SETUP.md  GETTING_STARTED.md  GITHUB_WORKFLOW_GUIDE.md  INTEGRATION_GUIDE.md  KB_INTEGRATION.md  KB_INTEGRATION_EXAMPLES.md  MYPY_STRATEGY.md  PHASE4_RAG_TESTS_SUMMARY.md  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY.md  VENV_ENFORCEMENT_SETUP.md  VENV_USAGE.md  bpmn_agent_compat.py  demo_phase3_orchestrator.py  pyproject.toml  requirements.txt  validation_phase4_demo.sh  verify_venv_setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/workflows/: ci.yml  llm-tests.yml  quality.yml  release.yml
agent/: __init__.py  orchestrator.py  state.py
bpmn_agent/: __init__.py  bpmn_agent_compat.py
bpmn_agent/agent/: __init__.py  checkpoint.py  config.py  error_handler.py  observability_hooks.py  orchestrator.py  state.py  tools.py
bpmn_agent/api/: __init__.py  app.py  pattern_matching_routes.py
bpmn_agent/core/: llm_client.py  observability.py  tokenizer.py
bpmn_agent/knowledge/: advanced_pattern_matcher.py  context_manager.py  domain_classifier.py  loader.py  pattern_matching_bridge.py  test_kb_integration.py  vector_store.py
bpmn_agent/knowledge/schemas/: BPMN20.xsd
bpmn_agent/models/: __init__.py  bpmn_elements.py  extraction.py  graph.py  knowledge_base.py
bpmn_agent/stages/: __init__.py  entity_extraction.py  entity_resolution.py  extraction_critique.py  extraction_prompts.py  process_graph_builder.py  text_preprocessing.py  xml_generation.py
bpmn_agent/tools/: __init__.py  cli.py  graph_analysis.py  refinement.py  validation.py
bpmn_agent/validation/: enhanced_xsd_validation.py  integration_layer.py  phase4_test_suite.py  rag_feedback_loop.py  rag_pattern_validator.py  result_mapper.py
core/: __init__.py  llm_client.py
demo/: README.md  demo_orchestrator.py  demo_phase3_tools.py  demo_phase3_tools_working.py
docs/: README.md
docs/development/: devops-setup.md  github-workflow.md  venv-enforcement.md
docs/guides/: getting-started.md  integration-guide.md  kb-integration-examples.md  quick-reference.md
knowledge/: __init__.py  advanced_pattern_matcher.py  context_manager.py  domain_classifier.py  loader.py  pattern_matching_bridge.py  test_kb_integration.py  vector_store.py
knowledge/patterns/: examples.json  finance_patterns.json  generic_patterns.json  healthcare_patterns.json  hr_patterns.json  it_patterns.json  manufacturing_patterns.json
models/: __init__.py  bpmn_elements.py  graph.py
scripts/: ensure_venv.py  fix_patterns.py  setup-dev.sh  verify_venv_setup.sh
stages/: __init__.py  entity_extraction.py  entity_resolution.py  extraction_critique.py  extraction_prompts.py  process_graph_builder.py  text_preprocessing.py  xml_generation.py
tests/: conftest.py  test_advanced_pattern_matcher.py  test_agent.py  test_e2e_integration.py  test_e2e_pattern_recognition.py  test_extraction_critique.py  test_integration_layer.py  test_kb_components.py  test_kb_graph_enricher_advanced.py  test_kb_stage4_integration.py  test_kb_stages_integration.py  test_llm_client_multimodel.py  test_orchestrator_phase4_validation.py  test_pattern_matching_api.py  test_pattern_matching_bridge.py  test_phase3_integration.py  test_phase3_tools_integration.py  test_phase4_e2e.py  test_rag_feedback_loop.py  test_rag_pattern_validator.py  test_result_mapper.py  test_text_preprocessing.py  test_xml_generation.py
tools/: __init__.py  cli.py
